# Lab-13

./: .gitignore  README.md  docker-compose.yml  go.mod  pyproject.toml
agents/candidate-matcher/: main.go
agents/common/: auction_test.go  models.go
agents/feedback-agent/: main.go
agents/interview-scheduler/: main.go
agents/resume-parser/: main.go
docs/: architecture.md
infra/docker/: go-agent.Dockerfile  python.Dockerfile
src/orchestrator/: __init__.py  api.py  models.py
src/orchestrator/domain/: __init__.py  auction.py  pipeline.py
src/orchestrator/services/: __init__.py  llm_agent.py  monitoring.py  orchestrator.py  scaler.py
tests/python/: test_hr_pipeline.py
