[project]
name = "lab13-hr-mas"
version = "0.1.0"
description = "Advanced multi-agent HR automation system for lab 13"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "nats-py>=2.11.0,<3.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "redis>=6.1.0,<7.0.0",
    "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/python"]

